[package]
name = "minesweeper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
debug = ["board_plugin/debug", "bevy-inspector-egui"]

[dependencies]
bevy = { version = "0.9.1", default-features = false, features = []}
board_plugin = { path = "board_plugin" }

bevy-inspector-egui = { version = "0.14", optional = true }


[workspace]
members = ["board_plugin"]
